# prisoma

./: .gitignore  .gitleaks.toml  .gitmodules  .ncp-consumer  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DIAGRAMS.md  EXPERIMENTS.md  FINAL_INTEGRITY_REPORT.md  GAUSS_MI_INTEGRATION.md  GENERATION_REPORT.md  LICENSE-APACHE  LICENSE-MIT  LIMITATIONS.md  NCP_DEV_PROMPT.md  README.md  RESEARCH_VLA_D_NCP.md  REVIEW_AND_TODO.md  SECURITY.md  THESIS_EVIDENCE_INDEX.md  THIRD_PARTY_NOTICES.generated.md  THIRD_PARTY_NOTICES.md  WORLD_WARP_INTEGRATION.md  deny.toml  findings.md  flake.nix  grandplan.md  justfile  new_grandplan.md  pid-splat.toml  pidsplatspecs.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-06-19T21-33-57-111Z.yml  page-2026-06-19T22-34-20-310Z.yml  page-2026-06-19T22-34-44-152Z.yml  page-2026-06-20T07-55-32-796Z.yml  page-2026-06-20T07-55-36-010Z.yml  page-2026-06-20T07-55-50-079Z.yml
crates/ncp-observer/: Cargo.toml  README.md  bounded_process.rs  build.rs
crates/ncp-observer/src/: lib.rs  observatory.rs
crates/pid-bridge/: Cargo.toml
crates/pid-bridge/src/: lib.rs
crates/pid-core/: Cargo.toml
crates/pid-core/src/: bootstrap.rs  ci.rs  discrete_pid.rs  distance_matrix.rs  error.rs  geometry.rs  hierarchy.rs  hyperbolic.rs  invariants.rs  isx.rs  ksg.rs  lib.rs  logistic.rs  matrix.rs  metric.rs  nn.rs  pid2.rs  pid3.rs  pipeline.rs  pls.rs  preprocess.rs  stats.rs
crates/pid-core/tests/: cross_validation.rs  distance_matrix.rs  geometry.rs  hierarchy.rs  hyperbolic_mi.rs  invariants.rs  isx.rs  ksg.rs  pid2.rs  pid3.rs  preprocess.rs
crates/pid-core/tests/common/: mod.rs
crates/pid-python/: Cargo.toml
crates/pid-python/src/: lib.rs
crates/pid-rerun/: Cargo.toml
crates/pid-rerun/src/: adapters.rs  bounded_process.rs  data.rs  entities.rs  lib.rs  runlog.rs
crates/pid-runlog/: Cargo.toml
crates/pid-runlog/src/: lib.rs
crates/pid-sim/: Cargo.toml
crates/pid-sim/fixtures/: h1_preflight_invalid.json  h1_preflight_parse_invalid.json  h1_preflight_valid.json  h1_protocol_a_parse_invalid.json  h1_protocol_a_valid.json  offline_vlda_continuous_fixture.json  offline_vlda_fixture.json  offline_vlda_highdim_fixture.json
crates/pid-sim/fixtures/h1_preflight_artifacts/: analysis_plan.json  clock_contract.json  design_blinding_order.json  input_coupling_receipt.json  instrumentation_spec.json  output_metric.json  policy_spec.json  reset_receipt.json  rng_coupling_receipt.json  source_run.jsonl  split_manifest.json  target_population.json
crates/pid-sim/fixtures/h2_reference/: analysis_plan.json  dataset_censored.json  dataset_complete.json  dataset_parse_invalid.json  event_ontology.json  feature_contract.json  split_manifest.json
crates/pid-sim/src/: h1_preflight.rs  h1_protocol_a.rs  h2_reference.rs  lib.rs  manipulation.rs  offline_harness.rs  physics.rs  power.rs  toy_harness.rs
docs/: AUDIT-2026-07-09.md  CAPABILITY_MATRIX.md
docs/archive/: README.md  grandplan-v10.7.md
docs/power-gate/: POWER-GATE-2026-07-10.md  README.md  power-gate-2026-07-10.json
docs/reviews/2026-07-12-grandplan-v12.5/: PRISOMA_REVIEW_README_v2.md  README.md  VALIDATION_REPORT_v2.md  grandplan_deep_review_v2_2026-07-12.md  grandplan_v11_to_v12_5_change_log.md  grandplan_v12_5_reference_audit.csv  prisoma_ecosystem_evidence_2026-07-12.csv  prisoma_ecosystem_integration_audit_2026-07-12.md  prisoma_review_manifest_v2.json  validation_checks_v2.json
experiments/attribution/: README.md  __init__.py  __main__.py  attribute.py  faithfulness.py  model.py  probe.py  runlog.py
experiments/safe_adapter/: README.md  __init__.py  __main__.py  contract.py  convert.py  extract.py  hook_probe.py  rollouts.py  verify.py
formal/: README.md  bridge_log_before_dispatch.smt2  coupling_nonidentification.smt2  h2_paired_brier_bounds.smt2  h3_full_population_fallback.smt2  individual_effect_prevalence_nonidentification.smt2  informative_censoring_nonidentification.smt2  model_registry.json  pid_nonidentification.smt2  receipt_last_publication.smt2  shannon_two_source_identity.smt2  typed_outcome_publication.smt2
meshmaker/: README.md  generate_meshes.py  generate_meshes_parallel.py  generate_meshes_robust.py  launch_swarm.sh  parallel_spawn.py  parallel_spawn_industrial.py  parallel_spawn_vla.py  spawn_bundeswehr_infantry.py  spawn_xerotropy_bundeswehr.py  verify_and_document.py
outputs/: arxiv_ref_cache.json
protocols/: README.md  capability_catalog_v1.json  capability_matrix_current_v1.json  ecosystem_evidence_current_v1.json  holdout_access_ledger_v1.jsonl  holdout_registry_v1.json  literature_screening_ledger_v1.json  m0_preregistration_skeleton_v1.json  m0_preregistration_successor_draft_v2.json  research_claim_registry_v1.json  transport_contamination_ledger_v1.json
release/0.9.0/: RELEASE_NOTES.md  candidate_progress.json
release/0.9.0/candidate/: artifact_manifest.json  claim_evidence_ledger.json  defect_register.json  draft_release_manifest.json  evidence_receipts.json  source_inventory.json
scripts/: audit_candidate_release.py  audit_ci_pins.py  audit_docset_claims.py  audit_grandplan.py  audit_grandplan_claims.py  audit_release_requirements.py  audit_release_review.py  audit_repo_truth.py  audit_research_governance.py  audit_research_governance_successor.py  check_formal_models.py  generate_candidate_release.py  generate_capability_matrix.py  generate_release_requirements.py  generate_release_review.py  generate_third_party_notices.py  update_arxiv_ref_cache.py
tests/python/: conftest.py  test_attribution.py  test_audit_docset_claims.py  test_candidate_release.py  test_capability_matrix.py  test_ci_pins.py  test_formal_models.py  test_optional_tool_hardening.py  test_pid_core_rs.py  test_release_requirements.py  test_release_review.py  test_repo_truth_hardening.py  test_research_governance.py  test_research_governance_successor.py  test_safe_adapter.py  test_third_party_notices.py
uidesigner/: UI.md  prompt_loop.py
(+8 files in other folders)
