[workspace]
resolver = "2"
members = [
    "crates/pid-bridge",
    "crates/pid-rerun",
    "crates/pid-sim",
]
# `pid-core` and `pid-runlog` are NOT vendored here. They are the canonical, single source
# of truth at https://github.com/sepahead/pid-rs, pinned in this repo as the `pid-rs/` git
# submodule (run `git submodule update --init`). The crates above path-depend into
# `pid-rs/crates/*`; `pid-rs` is its own workspace, so it is excluded here. Build/test the
# estimator core and run its `exp0` / `pid-runlog-replay` binaries from the submodule, e.g.
# `cargo run --manifest-path pid-rs/crates/pid-core/Cargo.toml --features experimental-all --bin exp0`.
#
# `ncp-observer` is intentionally NOT a default member: it git-depends on the published NCP
# SDK (https://github.com/sepahead/NCP, tag v0.8.0) and pulls in NCP + Zenoh — deliberately
# kept OFF prisoma's critical path. Build it explicitly with `--manifest-path`.
exclude = ["crates/ncp-observer", "pid-rs"]

[workspace.package]
version = "0.9.0"
authors = ["Sepehr Mahmoudian"]
edition = "2021"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sepahead/prisoma"
