[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pid-vla"
version = "0.1.0"
description = "Wibral-group shared-exclusions PID (I^sx_∩) for VLA diagnostics"
readme = "README.md"
requires-python = ">=3.11"

# Keep the default dependency set minimal; add groups as needed.
dependencies = [
  "numpy>=1.26",
]

[dependency-groups]
dev = [
  "maturin>=1.0,<2.0",
  "pytest>=8.0",
  "ruff>=0.6",
]

analysis = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "seaborn>=0.13",
]

report = [
  "reportlab>=4.0",
]

[tool.uv]
default-groups = ["dev", "analysis"]

[tool.ruff]
extend-exclude = [
  "meshmaker",
  "report_gen.py",
]

[tool.ruff.lint.per-file-ignores]
# `l` is the canonical "L" of the (V, L, D, A) contract and must match the JSON
# key the Rust harness expects; it is not an ambiguous accident here.
"experiments/safe_adapter/*" = ["E741"]
"tests/python/test_safe_adapter.py" = ["E741"]

[tool.maturin]
manifest-path = "crates/pid-python/Cargo.toml"
module-name = "pid_core_rs"
features = ["pyo3/extension-module"]
