[project]
name = "prisoma"
version = "0.9.0"
description = "Auditable experiment semantics for intervention-grounded diagnosis of embodied policies"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Sepehr Mahmoudian" },
]
license = "MIT OR Apache-2.0"
keywords = ["embodied-ai", "experiment-semantics", "provenance", "vla"]

[project.urls]
Homepage = "https://github.com/sepahead/prisoma"
Repository = "https://github.com/sepahead/prisoma"
Issues = "https://github.com/sepahead/prisoma/issues"

[dependency-groups]
runtime = [
  "numpy>=1.26",
]

dev = [
  "maturin>=1.0,<2.0",
  "pytest>=9.0.3",
  "ruff>=0.6",
]

analysis = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.2",
  "matplotlib>=3.8",
  # Security floor: matplotlib's unconstrained transitive Pillow dependency otherwise
  # permits releases affected by the 2026 image-decoder advisories.
  "pillow>=12.2.0",
  "seaborn>=0.13",
]

report = [
  "reportlab>=4.0",
]

[tool.uv]
# Prisoma 0.9 is a source/research release, not a PyPI distribution. The
# `pid_core_rs` Python extension is owned and versioned by the pinned `pid-rs`
# submodule and is built explicitly from its own Cargo manifest.
package = false
default-groups = ["runtime", "dev", "analysis"]

[tool.ruff]
extend-exclude = [
  "meshmaker",
  "report_gen.py",
  # The pid-rs submodule is a separate upstream project with its own lint policy;
  # `ruff check .` from the repo root must not walk it (it fails on its files).
  "pid-rs",
]

[tool.ruff.lint.per-file-ignores]
# `l` is the canonical "L" of the (V, L, D, A) contract and must match the JSON
# key the Rust harness expects; it is not an ambiguous accident here.
"experiments/safe_adapter/*" = ["E741"]
"tests/python/test_safe_adapter.py" = ["E741"]
