[package]
name = "ncp-observer"
version = "0.1.0"
edition = "2021"
description = "Passive Neuro-Cybernetic Protocol (NCP) observer for prisoma: taps the NCP perception/action/observation data planes read-only and maps them to (V,L,D,A) artifacts + run-log events for Partial Information Decomposition. Engram becomes another (V,L,D,A) source — like experiments/safe_adapter."
license = "MIT OR Apache-2.0"
# Internal crate (workspace-excluded; git/path-depends on NCP + pid-rs); never published to
# crates.io. Lets cargo-deny's `allow-wildcard-paths` exempt the versionless path dep.
publish = false

# Cross-repo dependency on the NCP standard SDK, pinned to the published repo
# (canonical home: https://github.com/sepahead/NCP). This resolves standalone on a
# fresh checkout (no sibling required); bump the tag to adopt a newer NCP wire.
[dependencies]
ncp-core = { git = "https://github.com/sepahead/NCP", tag = "v0.7.1" }
ncp-zenoh = { git = "https://github.com/sepahead/NCP", tag = "v0.7.1" }
pid-runlog = { path = "../../pid-rs/crates/pid-runlog" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }

[[bin]]
name = "ncp-observe"
path = "src/bin/observe.rs"
