[package]
name = "ncp-observer"
version = "0.9.0"
edition = "2021"
rust-version = "1.93"
authors = ["Sepehr Mahmoudian"]
description = "Read-only NCP observer groundwork for a future conforming external producer; no public live Engram integration is provided."
license = "MIT OR Apache-2.0"
repository = "https://github.com/sepahead/prisoma"
# Internal crate (workspace-excluded; git/path-depends on NCP + pid-rs); never published to
# crates.io. Lets cargo-deny's `allow-wildcard-paths` exempt the versionless path dep.
publish = false

# Cross-repo dependency on the NCP standard SDK, pinned to the published repo
# (canonical home: https://github.com/sepahead/NCP). This resolves standalone on a
# fresh checkout (no sibling required); bump the tag to adopt a newer NCP wire.
[dependencies]
ncp-core = { git = "https://github.com/sepahead/NCP", tag = "v0.8.0" }
ncp-zenoh = { git = "https://github.com/sepahead/NCP", tag = "v0.8.0" }
pid-runlog = { path = "../../pid-rs/crates/pid-runlog" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }

[[bin]]
name = "ncp-observe"
path = "src/bin/observe.rs"

[[bin]]
name = "ncp-fault-observatory"
path = "src/bin/fault_observatory.rs"
