[package]
name = "pid-bridge"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Local Agent Bridge request schema and run-log integration for prisoma"
license.workspace = true
repository.workspace = true
# Internal workspace crate (path-depends into the pid-rs submodule); never published to
# crates.io. Lets cargo-deny's `allow-wildcard-paths` exempt the versionless path deps.
publish = false

[lints]
workspace = true

[[bin]]
name = "pid-bridge-contract"
path = "src/bin/contract.rs"

[dependencies]
anyhow = "1.0"
pid-runlog = { path = "../../pid-rs/crates/pid-runlog" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
