[package]
name = "pid-rerun"
version = "0.1.0"
edition = "2021"
description = "Rerun visualization adapters for PID-VLA diagnostics"
license = "MIT"

[lib]
name = "pid_rerun"
path = "src/lib.rs"

[[bin]]
name = "pid-viewer"
path = "src/bin/viewer.rs"

[[bin]]
name = "vla-demo"
path = "src/bin/vla_demo.rs"

[[bin]]
name = "runlog-to-rerun"
path = "src/bin/runlog_to_rerun.rs"

[dependencies]
pid-core = { path = "../../pid-rs/crates/pid-core" }
pid-runlog = { path = "../../pid-rs/crates/pid-runlog" }
rerun = "0.28.1"
nalgebra = "0.33"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For VLA data loading
hdf5 = { version = "0.8", optional = true }
ndarray = "0.16"

[features]
default = []
hdf5-data = ["hdf5"]
