[package]
name = "pid-rerun"
version = "0.1.0"
edition = "2021"
description = "Rerun visualization adapters for prisoma diagnostics"
license = "MIT OR Apache-2.0"
# Internal workspace crate (path-depends into the pid-rs submodule); never published to
# crates.io. Lets cargo-deny's `allow-wildcard-paths` exempt the versionless path deps.
publish = false

[lib]
name = "pid_rerun"
path = "src/lib.rs"

[[bin]]
name = "pid-viewer"
path = "src/bin/viewer.rs"

[[bin]]
name = "vla-demo"
path = "src/bin/vla_demo.rs"

[[bin]]
name = "runlog-to-rerun"
path = "src/bin/runlog_to_rerun.rs"

[dependencies]
pid-core = { path = "../../pid-rs/crates/pid-core" }
pid-runlog = { path = "../../pid-rs/crates/pid-runlog" }
# The adapter only emits/serializes SDK archetypes. Rerun's default feature set also
# enables importers, dataframe support, and servers; those pull a much larger parser and
# network surface (including URDF/XML loaders) that this crate never calls.
rerun = { version = "0.28.1", default-features = false, features = ["sdk"] }
nalgebra = "0.33"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.16"

[features]
default = []
