[package]
name = "pid-runlog"
version = "0.1.0"
edition = "2021"
description = "Versioned run-log schema and replay helpers for PID-VLA diagnostics"
license = "MIT"

[lib]
name = "pid_runlog"
path = "src/lib.rs"

[[bin]]
name = "pid-runlog-replay"
path = "src/bin/replay.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
