[package]
name = "pid-sim"
version = "0.1.0"
edition = "2021"
description = "Deterministic object-simulation harness and Flow_gt extraction for PID-VLA"
license = "MIT"

[lib]
name = "pid_sim"
path = "src/lib.rs"

[[bin]]
name = "pid-sim-demo"
path = "src/bin/demo.rs"

[[bin]]
name = "pid-sim-bridge-demo"
path = "src/bin/bridge_demo.rs"

[[bin]]
name = "pid-sim-bridge-stdio"
path = "src/bin/bridge_stdio.rs"

[[bin]]
name = "pid-sim-verify"
path = "src/bin/verify.rs"

[dependencies]
anyhow = "1.0"
pid-bridge = { path = "../pid-bridge" }
pid-runlog = { path = "../pid-runlog" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
