[package]
name = "pid-sim"
version = "0.1.0"
edition = "2021"
description = "Deterministic object-simulation harness and Flow_gt extraction for prisoma"
license = "MIT OR Apache-2.0"
# Internal workspace crate (path-depends into the pid-rs submodule); never published to
# crates.io. Lets cargo-deny's `allow-wildcard-paths` exempt the versionless path deps.
publish = false

[lib]
name = "pid_sim"
path = "src/lib.rs"

[[bin]]
name = "pid-sim-power-gate"
path = "src/bin/power_gate.rs"

[[bin]]
name = "pid-sim-demo"
path = "src/bin/demo.rs"

[[bin]]
name = "pid-sim-bridge-demo"
path = "src/bin/bridge_demo.rs"

[[bin]]
name = "pid-sim-bridge-stdio"
path = "src/bin/bridge_stdio.rs"

[[bin]]
name = "pid-sim-bridge-tcp"
path = "src/bin/bridge_tcp.rs"

[[bin]]
name = "pid-sim-bridge-ws"
path = "src/bin/bridge_ws.rs"

[[bin]]
name = "pid-sim-verify"
path = "src/bin/verify.rs"

[[bin]]
name = "pid-toy-harness"
path = "src/bin/toy_harness.rs"

[[bin]]
name = "pid-offline-harness"
path = "src/bin/offline_harness.rs"

[[bin]]
name = "pid-rapier-harness"
path = "src/bin/rapier_harness.rs"
required-features = ["rapier"]

[features]
rapier = ["dep:rapier3d-f64"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
# pid-core 1.0 ships an empty default feature set: the continuous shared-exclusions estimators and
# the resampling/PLS pipelines the harnesses depend on are default-off research surfaces. Enabling a
# feature is a software switch, not a validity claim (`grandplan.md` §7.1).
pid-core = { path = "../../pid-rs/crates/pid-core", features = [
    "experimental-continuous",
    "experimental-pipelines",
] }
pid-bridge = { path = "../pid-bridge" }
pid-rerun = { path = "../pid-rerun" }
pid-runlog = { path = "../../pid-rs/crates/pid-runlog" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
rapier3d-f64 = { version = "0.22", optional = true }
